# progress-cockpit

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml  start.sh
backend/: main.py  mcp_server.py  parser.py  registry.py  schema.py  sources.py  store.py
examples/demo-project/.claude-progress/: CONTEXT.md  JOURNAL.md  state.json
examples/demo-project/docs/: auth-design.md
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  markdown.tsx  theme.css  types.ts
frontend/src/components/: DetailPanel.tsx  Dialog.tsx  DocView.tsx  Kanban.tsx  Layout.tsx  ProjectView.tsx  Sidebar.tsx
frontend/src/hooks/: useLiveUpdates.ts  useLocalStorage.ts  useTheme.ts
scripts/: launchd.plist.template  launchd.sh
skill/: SKILL.md
