[project]
name = "progress-cockpit"
version = "0.1.0"
description = "Local TODO/progress board for projects, swappable data sources (.claude-progress / ~/.claude/tasks)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "watchfiles>=0.22",
    "pydantic>=2.6",
    "mcp>=1.2",
    "httpx>=0.27",
]

[project.scripts]
progress-cockpit = "backend.main:run"
progress-cockpit-mcp = "backend.mcp_server:run"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["backend"]
